plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    group = 'io.aegis.gateway'
    version = '1.0.0-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.6"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.1.1"
            mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:2025.1.0.0"
        }
    }

    dependencies {
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'io.projectreactor:reactor-test'
    }

    test {
        useJUnitPlatform()
        jvmArgs '--enable-preview'
    }

    compileJava {
        options.compilerArgs += ['--enable-preview']
        options.release = 25
    }

    compileTestJava {
        options.compilerArgs += ['--enable-preview']
        options.release = 25
    }
}
